--- a/index.html
+++ b/index.html
@@ -10,14 +10,26 @@
 <body>
     <canvas id="canvas"></canvas>
     <script>
-        var canvas = document.getElementById('canvas')
+        let canvas = document.getElementById('canvas')
         canvas.width = document.documentElement.clientWidth
         canvas.height = document.documentElement.clientHeight
-        var ctx = canvas.getContext('2d')
-        console.log(canvas.height)
+        let painting = false
+        let ctx = canvas.getContext('2d')
         ctx.fillStyle = 'blue'
+        ctx.strokeStyle = 'none'
+        canvas.onmousedown = () => {
+            painting = true
+        }
         canvas.onmousemove = (e) => {
-            ctx.fillRect(e.clientX - 2, e.clientY - 2, 4, 4)
+            if(painting === true){
+                ctx.beginPath()
+                ctx.arc(e.clientX, e.clientY, 4, 0, 2 * Math.PI)
+                ctx.stroke()
+                ctx.fill()
+            }
+        }
+        canvas.onmouseup = () => {
+            painting = false
         }
     </script>
 </body>
